# fpcs

./: MANIFEST.in  README.md  pyproject.toml  setup.py  smoke_test.py  test_fpcs.py
.github/workflows/: publish.yml  tests.yml
data/: FaultDetectionA.txt  FaultDetectionA_TEST_SUBSET.npz  compare_downsampling.py
src/fpcs/: __init__.py  fpcs_cy.pyx  fpcs_pure.py
